penambahan dataframe dengan fillpack B

--- a/utility_report.ipynb
+++ b/utility_report.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,22 +117,369 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>workcenter</th>\n",
+       "      <th>name</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>week</th>\n",
+       "      <th>day</th>\n",
+       "      <th>day_cat</th>\n",
+       "      <th>shift</th>\n",
+       "      <th>task_cat</th>\n",
+       "      <th>wo</th>\n",
+       "      <th>wo_status</th>\n",
+       "      <th>system</th>\n",
+       "      <th>machine</th>\n",
+       "      <th>date_start</th>\n",
+       "      <th>date_finish</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>remark</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>208</th>\n",
+       "      <td>Fillpack B</td>\n",
+       "      <td>Ryan Pahmi Agustian</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>4</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>1</td>\n",
+       "      <td>PMT</td>\n",
+       "      <td>AB1913-0080</td>\n",
+       "      <td>done</td>\n",
+       "      <td>Packing</td>\n",
+       "      <td>Wrapping WRP1013</td>\n",
+       "      <td>2019-04-04 06:30:00</td>\n",
+       "      <td>2019-04-04 13:00:00</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>overlap</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>209</th>\n",
+       "      <td>Fillpack B</td>\n",
+       "      <td>Ryan Pahmi Agustian</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>4</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Repair</td>\n",
+       "      <td>AC1914-0136</td>\n",
+       "      <td>done</td>\n",
+       "      <td>Filling</td>\n",
+       "      <td>Filling 6 Line F6L1005</td>\n",
+       "      <td>2019-04-04 07:00:00</td>\n",
+       "      <td>2019-04-04 10:00:00</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>overlap</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>227</th>\n",
+       "      <td>Fillpack B</td>\n",
+       "      <td>Ryan Pahmi Agustian</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>2</td>\n",
+       "      <td>FFT</td>\n",
+       "      <td>AB1914-0076</td>\n",
+       "      <td>done</td>\n",
+       "      <td>Filling</td>\n",
+       "      <td>Filling 6 Line F6L1008</td>\n",
+       "      <td>2019-04-09 18:30:00</td>\n",
+       "      <td>2019-04-09 19:00:00</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>overlap</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>228</th>\n",
+       "      <td>Fillpack B</td>\n",
+       "      <td>Ryan Pahmi Agustian</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>2</td>\n",
+       "      <td>FFT</td>\n",
+       "      <td>AB1914-0078</td>\n",
+       "      <td>done</td>\n",
+       "      <td>Filling</td>\n",
+       "      <td>Filling 6 Line F6L1010</td>\n",
+       "      <td>2019-04-09 18:30:00</td>\n",
+       "      <td>2019-04-09 19:00:00</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>overlap</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>484</th>\n",
+       "      <td>Fillpack B</td>\n",
+       "      <td>Wisnu Prabowo</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>4</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>1</td>\n",
+       "      <td>PMT</td>\n",
+       "      <td>AB1913-0080</td>\n",
+       "      <td>done</td>\n",
+       "      <td>Packing</td>\n",
+       "      <td>Wrapping WRP1013</td>\n",
+       "      <td>2019-04-04 06:30:00</td>\n",
+       "      <td>2019-04-04 13:00:00</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>overlap</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     workcenter                 name  year  month  week       day day_cat  \\\n",
+       "208  Fillpack B  Ryan Pahmi Agustian  2019      4    14  Thursday  normal   \n",
+       "209  Fillpack B  Ryan Pahmi Agustian  2019      4    14  Thursday  normal   \n",
+       "227  Fillpack B  Ryan Pahmi Agustian  2019      4    15   Tuesday  normal   \n",
+       "228  Fillpack B  Ryan Pahmi Agustian  2019      4    15   Tuesday  normal   \n",
+       "484  Fillpack B        Wisnu Prabowo  2019      4    14  Thursday  normal   \n",
+       "\n",
+       "     shift task_cat           wo wo_status   system                 machine  \\\n",
+       "208      1      PMT  AB1913-0080      done  Packing        Wrapping WRP1013   \n",
+       "209      1   Repair  AC1914-0136      done  Filling  Filling 6 Line F6L1005   \n",
+       "227      2      FFT  AB1914-0076      done  Filling  Filling 6 Line F6L1008   \n",
+       "228      2      FFT  AB1914-0078      done  Filling  Filling 6 Line F6L1010   \n",
+       "484      1      PMT  AB1913-0080      done  Packing        Wrapping WRP1013   \n",
+       "\n",
+       "             date_start         date_finish  duration   remark  \n",
+       "208 2019-04-04 06:30:00 2019-04-04 13:00:00       6.5  overlap  \n",
+       "209 2019-04-04 07:00:00 2019-04-04 10:00:00       3.0  overlap  \n",
+       "227 2019-04-09 18:30:00 2019-04-09 19:00:00       0.5  overlap  \n",
+       "228 2019-04-09 18:30:00 2019-04-09 19:00:00       0.5  overlap  \n",
+       "484 2019-04-04 06:30:00 2019-04-04 13:00:00       6.5  overlap  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "overlap = pd.read_excel(join(os.getcwd(), 'data_output', 'data_overlap.xlsx'))\n",
+    "overlap = pd.read_excel(join(os.getcwd(), 'data_output', 'data_overlap.xlsx'), index_col=0)\n",
     "overlap.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>workcenter</th>\n",
+       "      <th>name</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>week</th>\n",
+       "      <th>day</th>\n",
+       "      <th>day_cat</th>\n",
+       "      <th>shift</th>\n",
+       "      <th>task_cat</th>\n",
+       "      <th>wo</th>\n",
+       "      <th>wo_status</th>\n",
+       "      <th>system</th>\n",
+       "      <th>machine</th>\n",
+       "      <th>date_start</th>\n",
+       "      <th>date_finish</th>\n",
+       "      <th>duration</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>Fillpack B</td>\n",
+       "      <td>Moch Syarifudin</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Repair</td>\n",
+       "      <td>AC1915-0134</td>\n",
+       "      <td>done</td>\n",
+       "      <td>Filling</td>\n",
+       "      <td>Filling Stickpack FST1001</td>\n",
+       "      <td>2019-04-13 15:30:00</td>\n",
+       "      <td>2019-04-13 17:30:00</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>Fillpack B</td>\n",
+       "      <td>Moch Syarifudin</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Repair</td>\n",
+       "      <td>AC1915-0134</td>\n",
+       "      <td>done</td>\n",
+       "      <td>Filling</td>\n",
+       "      <td>Filling Stickpack FST1001</td>\n",
+       "      <td>2019-04-13 18:30:00</td>\n",
+       "      <td>2019-04-13 20:30:00</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>133</th>\n",
+       "      <td>Fillpack B</td>\n",
+       "      <td>Reza Akbar Budiman</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Repair</td>\n",
+       "      <td>AC1915-0134</td>\n",
+       "      <td>done</td>\n",
+       "      <td>Filling</td>\n",
+       "      <td>Filling Stickpack FST1001</td>\n",
+       "      <td>2019-04-13 15:30:00</td>\n",
+       "      <td>2019-04-13 17:30:00</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>134</th>\n",
+       "      <td>Fillpack B</td>\n",
+       "      <td>Reza Akbar Budiman</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Repair</td>\n",
+       "      <td>AC1915-0134</td>\n",
+       "      <td>done</td>\n",
+       "      <td>Filling</td>\n",
+       "      <td>Filling Stickpack FST1001</td>\n",
+       "      <td>2019-04-13 18:30:00</td>\n",
+       "      <td>2019-04-13 20:30:00</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>378</th>\n",
+       "      <td>Fillpack B</td>\n",
+       "      <td>Ujang Sukarta</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Repair</td>\n",
+       "      <td>AC1915-0125</td>\n",
+       "      <td>done</td>\n",
+       "      <td>Packing</td>\n",
+       "      <td>Wrapping WRP1008</td>\n",
+       "      <td>2019-04-13 06:30:00</td>\n",
+       "      <td>2019-04-13 07:00:00</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     workcenter                name  year  month  week       day day_cat  \\\n",
+       "32   Fillpack B     Moch Syarifudin  2019      4    15  Saturday  normal   \n",
+       "33   Fillpack B     Moch Syarifudin  2019      4    15  Saturday  normal   \n",
+       "133  Fillpack B  Reza Akbar Budiman  2019      4    15  Saturday  normal   \n",
+       "134  Fillpack B  Reza Akbar Budiman  2019      4    15  Saturday  normal   \n",
+       "378  Fillpack B       Ujang Sukarta  2019      4    15  Saturday  normal   \n",
+       "\n",
+       "     shift task_cat           wo wo_status   system  \\\n",
+       "32     NaN   Repair  AC1915-0134      done  Filling   \n",
+       "33     NaN   Repair  AC1915-0134      done  Filling   \n",
+       "133    NaN   Repair  AC1915-0134      done  Filling   \n",
+       "134    NaN   Repair  AC1915-0134      done  Filling   \n",
+       "378    NaN   Repair  AC1915-0125      done  Packing   \n",
+       "\n",
+       "                       machine          date_start         date_finish  \\\n",
+       "32   Filling Stickpack FST1001 2019-04-13 15:30:00 2019-04-13 17:30:00   \n",
+       "33   Filling Stickpack FST1001 2019-04-13 18:30:00 2019-04-13 20:30:00   \n",
+       "133  Filling Stickpack FST1001 2019-04-13 15:30:00 2019-04-13 17:30:00   \n",
+       "134  Filling Stickpack FST1001 2019-04-13 18:30:00 2019-04-13 20:30:00   \n",
+       "378           Wrapping WRP1008 2019-04-13 06:30:00 2019-04-13 07:00:00   \n",
+       "\n",
+       "     duration  \n",
+       "32        2.0  \n",
+       "33        2.0  \n",
+       "133       2.0  \n",
+       "134       2.0  \n",
+       "378       0.5  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "wo_kosong = pd.read_excel(join(os.getcwd(), 'data_output', 'shift_kosong.xlsx'))\n",
-    "wo_kosong.head()"
+    "shift_kosong = pd.read_excel(join(os.getcwd(), 'data_output', 'shift_kosong.xlsx'), index_col=0)\n",
+    "shift_kosong.head()"
    ]
   },
   {
@@ -143,6 +490,17 @@
    "source": [
     "plot = linebarplot(2019, mh, wo_pmt, wo_rep)\n",
     "show(plot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writer = pd.ExcelWriter('data_output/df.xlsx')\n",
+    "df.to_excel(writer, 'cek')\n",
+    "writer.save()"
    ]
   },
   {
