interactive graph: year and woc

--- a/utility_report.ipynb
+++ b/utility_report.ipynb
@@ -14,7 +14,13 @@
     "## Readme\n",
     "\n",
     "Laporan ini dibuat semata untuk membantu mempercepat proses pengolahan data. Terutama data yang dibutuhkan dalam report bulanan dan 3-bulanan.\n",
-    "Penjelasan dan follow up dari laporan akan diterangkan pada format powerpoint yang berlaku."
+    "Penjelasan dan follow up dari laporan akan diterangkan pada format powerpoint yang berlaku.\n",
+    "\n",
+    "Dibawah ini adalah library/framework yang dibutuhkan selama pengolahan data. Jika muncul error 'No Module' lakukan installasi dengan cara berikut:\n",
+    "\n",
+    "* buka cmd melalui hotkeys windows+R\n",
+    "* ketik >> pip install \"nama module yg akan diinstall\"\n",
+    "* tunggu proses installasi"
    ]
   },
   {
@@ -30,13 +36,14 @@
     "import os\n",
     "from os.path import join\n",
     "\n",
-    "# Bokeh for data visualization\n",
-    "from bokeh.io import show"
+    "# ipywidgets for chart interactive\n",
+    "import ipywidgets as wg\n",
+    "from ipywidgets import interact, fixed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,20 +106,32 @@
     "data_raw = pd.read_csv(join(os.getcwd(), 'datasets', 'Data_Mentah.csv'))\n",
     "data_tek = pd.read_csv(join(os.getcwd(), 'datasets', 'Performance_Teknisi_Tracker.csv'))\n",
     "data_wo = pd.read_csv(join(os.getcwd(), 'datasets', 'Performance_WO_Tracker.csv'))\n",
-    "data_shft = pd.read_csv(join(os.getcwd(), 'datasets', 'data_shift.csv'), sep=';') # update manual\n",
-    "data_msn = pd.read_csv(join(os.getcwd(), 'datasets', 'Database Mesin PEA 2019.csv'), sep=';') # update manual\n",
-    "data_nwo = pd.read_csv(join(os.getcwd(), 'datasets', 'info_non_wo.csv'), sep=';') # update manual"
+    "\n",
+    "# Data dibawah ini di update manual, simpan dalam CSV\n",
+    "data_shft = pd.read_csv(join(os.getcwd(), 'datasets', 'data_shift.csv'), sep=';')\n",
+    "data_msn = pd.read_csv(join(os.getcwd(), 'datasets', 'Database Mesin PEA 2019.csv'), sep=';')\n",
+    "data_nwo = pd.read_csv(join(os.getcwd(), 'datasets', 'info_non_wo.csv'), sep=';')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# merging dataset & produce new dataset to correction\n",
     "df = actransform(data_tek, data_wo, data_msn, data_shft, data_nwo)\n",
     "mh, wo_pmt, wo_rep = prep4chart(df=df, rpmtdata=data_rpmt, rpairdata=data_raw)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cek overlap & wo tanpa di shift yg benar\n",
+    "\n",
+    "Kirim data overlap ke T2 untuk di revisi atau dapat dilakukan melalui PDA ke Rifky\n",
+    "Shift kosong silakan cek di JPM bagian mana yg tidak sesuai, biasanya pada bagian overtime yang tidak terdaftar"
    ]
   },
   {
@@ -484,23 +503,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c2d8a3690e094cd399f8f86b70772b5d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='year', options=(2019, 2018), value=2019), Dropdown(description='wo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function scripts.chart_generator.linebarplot(year, woc, mh, wo_pmt, wo_rep)>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "plot = linebarplot(2019, mh, wo_pmt, wo_rep)\n",
-    "show(plot)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "writer = pd.ExcelWriter('data_output/df.xlsx')\n",
-    "df.to_excel(writer, 'cek')\n",
-    "writer.save()"
+    "dd_year = wg.Dropdown(options=[year for year in df['year'].unique()],\n",
+    "                 value=2019,\n",
+    "                 description='year',\n",
+    "                 disabled=False)\n",
+    "dd_woc = wg.Dropdown(options=[woc for woc in df['workcenter'].unique()],\n",
+    "                    value='Utility',\n",
+    "                    description='workcenter',\n",
+    "                    disabled=False)\n",
+    "interact(linebarplot, year=dd_year, woc=dd_woc, mh=fixed(mh), wo_pmt=fixed(wo_pmt), wo_rep=fixed(wo_rep))"
    ]
   },
   {
