--- a/main.ipynb
+++ b/main.ipynb
@@ -83,7 +83,7 @@
     "             'Data_Mentah_Maintenance',\n",
     "             'Data_Mentah']\n",
     "# url_report = \"http://username:password@link_reportportal_yg_akan_dituju\"\n",
-    "url_report = \"http://maula.fahim:welcometoparadise21@reportportal/Reports/Pages/Folder.aspx?ItemPath=%2f99.+Aplikasi+lain-lain%2f04.Aplikasi+Manufacturing%2fPortal+Engineering%2fWork+Order&ViewMode=List\"\n",
+    "url_report = \"http://username-email:password-email@reportportal/Reports/Pages/Folder.aspx?ItemPath=%2f99.+Aplikasi+lain-lain%2f04.Aplikasi+Manufacturing%2fPortal+Engineering%2fWork+Order&ViewMode=List\"\n",
     "set_dataset(url_report, file_name)"
    ]
   },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,9 +136,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>workcenter</th>\n",
+       "      <th>name</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>week</th>\n",
+       "      <th>day</th>\n",
+       "      <th>day_cat</th>\n",
+       "      <th>shift</th>\n",
+       "      <th>task_cat</th>\n",
+       "      <th>wo</th>\n",
+       "      <th>wo_status</th>\n",
+       "      <th>system</th>\n",
+       "      <th>machine</th>\n",
+       "      <th>date_start</th>\n",
+       "      <th>date_finish</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>remark</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>Fillpack A</td>\n",
+       "      <td>Agus Wildan Hilmi</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>4</td>\n",
+       "      <td>17</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Unplanned</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>Done</td>\n",
+       "      <td>Others</td>\n",
+       "      <td>Cuti - IMP</td>\n",
+       "      <td>2019-04-24 14:00:00</td>\n",
+       "      <td>2019-04-24 16:00:00</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>overlap</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>Fillpack A</td>\n",
+       "      <td>Agus Wildan Hilmi</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>4</td>\n",
+       "      <td>17</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Repair</td>\n",
+       "      <td>AC1917-0036</td>\n",
+       "      <td>done</td>\n",
+       "      <td>Filling</td>\n",
+       "      <td>Filling 9 Line F9L1004</td>\n",
+       "      <td>2019-04-24 14:30:00</td>\n",
+       "      <td>2019-04-24 18:00:00</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>overlap</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>640</th>\n",
+       "      <td>Fillpack A</td>\n",
+       "      <td>Yudi Hermawan Toni</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>4</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Repair</td>\n",
+       "      <td>AC1917-0226</td>\n",
+       "      <td>done</td>\n",
+       "      <td>Packing</td>\n",
+       "      <td>Printer PRT1029</td>\n",
+       "      <td>2019-04-29 14:00:00</td>\n",
+       "      <td>2019-04-29 15:00:00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>overlap</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>641</th>\n",
+       "      <td>Fillpack A</td>\n",
+       "      <td>Yudi Hermawan Toni</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>4</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Planned</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>Done</td>\n",
+       "      <td>Others</td>\n",
+       "      <td>STG - Training I-Care</td>\n",
+       "      <td>2019-04-29 14:00:00</td>\n",
+       "      <td>2019-04-29 15:00:00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>overlap</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>892</th>\n",
+       "      <td>Fillpack B</td>\n",
+       "      <td>Reza Akbar Budiman</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>5</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Repair</td>\n",
+       "      <td>AC1919-0176</td>\n",
+       "      <td>done</td>\n",
+       "      <td>Packing</td>\n",
+       "      <td>Wrapping WRP1014</td>\n",
+       "      <td>2019-05-13 06:30:00</td>\n",
+       "      <td>2019-05-13 07:30:00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>overlap</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     workcenter                name  year  month  week        day day_cat  \\\n",
+       "47   Fillpack A   Agus Wildan Hilmi  2019      4    17  Wednesday  Normal   \n",
+       "48   Fillpack A   Agus Wildan Hilmi  2019      4    17  Wednesday  normal   \n",
+       "640  Fillpack A  Yudi Hermawan Toni  2019      4    18     Monday  normal   \n",
+       "641  Fillpack A  Yudi Hermawan Toni  2019      4    18     Monday  Normal   \n",
+       "892  Fillpack B  Reza Akbar Budiman  2019      5    20     Monday  normal   \n",
+       "\n",
+       "     shift   task_cat           wo wo_status   system                 machine  \\\n",
+       "47       1  Unplanned           AZ      Done   Others              Cuti - IMP   \n",
+       "48       2     Repair  AC1917-0036      done  Filling  Filling 9 Line F9L1004   \n",
+       "640      2     Repair  AC1917-0226      done  Packing         Printer PRT1029   \n",
+       "641      1    Planned           AZ      Done   Others   STG - Training I-Care   \n",
+       "892      1     Repair  AC1919-0176      done  Packing        Wrapping WRP1014   \n",
+       "\n",
+       "             date_start         date_finish  duration   remark  \n",
+       "47  2019-04-24 14:00:00 2019-04-24 16:00:00       2.0  overlap  \n",
+       "48  2019-04-24 14:30:00 2019-04-24 18:00:00       3.5  overlap  \n",
+       "640 2019-04-29 14:00:00 2019-04-29 15:00:00       1.0  overlap  \n",
+       "641 2019-04-29 14:00:00 2019-04-29 15:00:00       1.0  overlap  \n",
+       "892 2019-05-13 06:30:00 2019-05-13 07:30:00       1.0  overlap  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "overlap = pd.read_excel(join(os.getcwd(), 'data_output', 'data_overlap.xlsx'), index_col=0)\n",
     "overlap.head()"
@@ -146,9 +319,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>workcenter</th>\n",
+       "      <th>name</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>week</th>\n",
+       "      <th>day</th>\n",
+       "      <th>day_cat</th>\n",
+       "      <th>shift</th>\n",
+       "      <th>task_cat</th>\n",
+       "      <th>wo</th>\n",
+       "      <th>wo_status</th>\n",
+       "      <th>system</th>\n",
+       "      <th>machine</th>\n",
+       "      <th>date_start</th>\n",
+       "      <th>date_finish</th>\n",
+       "      <th>duration</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>742</th>\n",
+       "      <td>Fillpack B</td>\n",
+       "      <td>Moch Syarifudin</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Repair</td>\n",
+       "      <td>AC1915-0134</td>\n",
+       "      <td>done</td>\n",
+       "      <td>Filling</td>\n",
+       "      <td>Filling Stickpack FST1001</td>\n",
+       "      <td>2019-04-13 15:30:00</td>\n",
+       "      <td>2019-04-13 17:30:00</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>743</th>\n",
+       "      <td>Fillpack B</td>\n",
+       "      <td>Moch Syarifudin</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Repair</td>\n",
+       "      <td>AC1915-0134</td>\n",
+       "      <td>done</td>\n",
+       "      <td>Filling</td>\n",
+       "      <td>Filling Stickpack FST1001</td>\n",
+       "      <td>2019-04-13 18:30:00</td>\n",
+       "      <td>2019-04-13 20:30:00</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>850</th>\n",
+       "      <td>Fillpack B</td>\n",
+       "      <td>Reza Akbar Budiman</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Repair</td>\n",
+       "      <td>AC1915-0134</td>\n",
+       "      <td>done</td>\n",
+       "      <td>Filling</td>\n",
+       "      <td>Filling Stickpack FST1001</td>\n",
+       "      <td>2019-04-13 15:30:00</td>\n",
+       "      <td>2019-04-13 17:30:00</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>851</th>\n",
+       "      <td>Fillpack B</td>\n",
+       "      <td>Reza Akbar Budiman</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Repair</td>\n",
+       "      <td>AC1915-0134</td>\n",
+       "      <td>done</td>\n",
+       "      <td>Filling</td>\n",
+       "      <td>Filling Stickpack FST1001</td>\n",
+       "      <td>2019-04-13 18:30:00</td>\n",
+       "      <td>2019-04-13 20:30:00</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1108</th>\n",
+       "      <td>Fillpack B</td>\n",
+       "      <td>Ujang Sukarta</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Repair</td>\n",
+       "      <td>AC1915-0125</td>\n",
+       "      <td>done</td>\n",
+       "      <td>Packing</td>\n",
+       "      <td>Wrapping WRP1008</td>\n",
+       "      <td>2019-04-13 06:30:00</td>\n",
+       "      <td>2019-04-13 07:00:00</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      workcenter                name  year  month  week       day day_cat  \\\n",
+       "742   Fillpack B     Moch Syarifudin  2019      4    15  Saturday  normal   \n",
+       "743   Fillpack B     Moch Syarifudin  2019      4    15  Saturday  normal   \n",
+       "850   Fillpack B  Reza Akbar Budiman  2019      4    15  Saturday  normal   \n",
+       "851   Fillpack B  Reza Akbar Budiman  2019      4    15  Saturday  normal   \n",
+       "1108  Fillpack B       Ujang Sukarta  2019      4    15  Saturday  normal   \n",
+       "\n",
+       "      shift task_cat           wo wo_status   system  \\\n",
+       "742     NaN   Repair  AC1915-0134      done  Filling   \n",
+       "743     NaN   Repair  AC1915-0134      done  Filling   \n",
+       "850     NaN   Repair  AC1915-0134      done  Filling   \n",
+       "851     NaN   Repair  AC1915-0134      done  Filling   \n",
+       "1108    NaN   Repair  AC1915-0125      done  Packing   \n",
+       "\n",
+       "                        machine          date_start         date_finish  \\\n",
+       "742   Filling Stickpack FST1001 2019-04-13 15:30:00 2019-04-13 17:30:00   \n",
+       "743   Filling Stickpack FST1001 2019-04-13 18:30:00 2019-04-13 20:30:00   \n",
+       "850   Filling Stickpack FST1001 2019-04-13 15:30:00 2019-04-13 17:30:00   \n",
+       "851   Filling Stickpack FST1001 2019-04-13 18:30:00 2019-04-13 20:30:00   \n",
+       "1108           Wrapping WRP1008 2019-04-13 06:30:00 2019-04-13 07:00:00   \n",
+       "\n",
+       "      duration  \n",
+       "742        2.0  \n",
+       "743        2.0  \n",
+       "850        2.0  \n",
+       "851        2.0  \n",
+       "1108       0.5  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "shift_kosong = pd.read_excel(join(os.getcwd(), 'data_output', 'shift_kosong.xlsx'), index_col=0)\n",
     "shift_kosong.head()"
@@ -156,9 +503,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dfadcd5bcd2e428ea962aaa2cd727939",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='year', options=(2019, 2018), value=2019), Dropdown(description='wo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function scripts.chart_generator.linebarplot(year, woc, mh, wo_pmt, wo_rep)>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dd_year = wg.Dropdown(options=[year for year in df['year'].unique()],\n",
     "                 value=2019,\n",
