--- a/main.ipynb
+++ b/main.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -312,111 +312,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3159</th>\n",
-       "      <td>Utility</td>\n",
-       "      <td>Abdul Rahman</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>5</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Thursday</td>\n",
-       "      <td>normal</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Planned</td>\n",
-       "      <td>AZ</td>\n",
-       "      <td>done</td>\n",
-       "      <td>others</td>\n",
-       "      <td>Cuti</td>\n",
-       "      <td>2019-05-23 14:00:00</td>\n",
-       "      <td>2019-05-23 22:30:00</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>overlap</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3160</th>\n",
-       "      <td>Utility</td>\n",
-       "      <td>Abdul Rahman</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>5</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Friday</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Planned</td>\n",
-       "      <td>AZ</td>\n",
-       "      <td>Done</td>\n",
-       "      <td>Others</td>\n",
-       "      <td>STG - Sosialisasi IBPR</td>\n",
-       "      <td>2019-05-23 14:00:00</td>\n",
-       "      <td>2019-05-23 15:30:00</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>overlap</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8688</th>\n",
-       "      <td>Utility</td>\n",
-       "      <td>Sapari</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>5</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Friday</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Planned</td>\n",
-       "      <td>AZ</td>\n",
-       "      <td>Done</td>\n",
-       "      <td>Others</td>\n",
-       "      <td>STG - Sosialisasi IBPR</td>\n",
-       "      <td>2019-05-23 14:00:00</td>\n",
-       "      <td>2019-05-23 15:30:00</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>overlap</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8689</th>\n",
-       "      <td>Utility</td>\n",
-       "      <td>Sapari</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>5</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Thursday</td>\n",
-       "      <td>normal</td>\n",
-       "      <td>2</td>\n",
-       "      <td>PMT</td>\n",
-       "      <td>AB1921-0023</td>\n",
-       "      <td>done</td>\n",
-       "      <td>Air Handling</td>\n",
-       "      <td>Air Conditioner ACD1125</td>\n",
-       "      <td>2019-05-23 15:00:00</td>\n",
-       "      <td>2019-05-23 17:30:00</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>overlap</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     workcenter          name  year  month  week       day day_cat  shift  \\\n",
-       "3159    Utility  Abdul Rahman  2019      5    21  Thursday  normal      2   \n",
-       "3160    Utility  Abdul Rahman  2019      5    21    Friday  Normal      1   \n",
-       "8688    Utility        Sapari  2019      5    21    Friday  Normal      1   \n",
-       "8689    Utility        Sapari  2019      5    21  Thursday  normal      2   \n",
-       "\n",
-       "     task_cat           wo wo_status        system                  machine  \\\n",
-       "3159  Planned           AZ      done        others                     Cuti   \n",
-       "3160  Planned           AZ      Done        Others   STG - Sosialisasi IBPR   \n",
-       "8688  Planned           AZ      Done        Others   STG - Sosialisasi IBPR   \n",
-       "8689      PMT  AB1921-0023      done  Air Handling  Air Conditioner ACD1125   \n",
-       "\n",
-       "              date_start         date_finish  duration   remark  \n",
-       "3159 2019-05-23 14:00:00 2019-05-23 22:30:00       8.5  overlap  \n",
-       "3160 2019-05-23 14:00:00 2019-05-23 15:30:00       1.5  overlap  \n",
-       "8688 2019-05-23 14:00:00 2019-05-23 15:30:00       1.5  overlap  \n",
-       "8689 2019-05-23 15:00:00 2019-05-23 17:30:00       2.5  overlap  "
+       "Empty DataFrame\n",
+       "Columns: [workcenter, name, year, month, week, day, day_cat, shift, task_cat, wo, wo_status, system, machine, date_start, date_finish, duration, remark]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -493,7 +399,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -523,7 +429,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d14358ba9524627888a9121b2b003c3",
+       "model_id": "2c90efbf737c49b28762cc7be094ec3a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -540,7 +446,7 @@
        "<function scripts.chart_generator.linebarplot(year, woc, mh, wo_pmt, wo_rep)>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
